--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <i class="fa-solid fa-user" style="color: #050505;"></i>
 
         </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+
+        </div>
     </div>
 
     <!--Categories-->
