--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learning</p>
+            <!--<p>My Learning</p>-->
+            <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>you did not purcase anyting yet</p>
+
+                </div>
+            </div>
+            
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #030303;"></i>
             <i class="fa-solid fa-user" style="color: #050505;"></i>
@@ -56,6 +64,10 @@
     <!--Sale Image-->
     <div class="sale-image">
         <img src="./images/sale-image.jpg" alt="Sale Image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top Courses for just 499. Just one day to save but a lifetime to learn</p>
+        </div>
 
     </div>
 
